--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,35 +28,36 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        <p>Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.</p>
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/owner.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
+          <p class="title">Owner</p>
           <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
+          <p class="card-text">Our CEO, Tom Cruze, has over 20 years of experience in the automotive industry. She believes in providing excellent service and quality vehicles.</p>
           <p>person1@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/accountant.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
+          <p class="title">Chief Accountant</p>
           <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
+          <p class="card-text">With over 15 years of experience in financial management, John Doe leads the accounting department at Best Cars Dealership. His expertise ensures the company's financial health through meticulous budgeting, accurate record-keeping, and compliance with all regulatory standards.</p>
           <p>person2@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/engineer.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
+          <p class="title">Chief Engineer</p>
           <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
+          <p class="card-text">Jane Smith brings over 20 years of automotive engineering expertise to Best Cars Dealership. As our Chief Engineer, she oversees the technical operations, ensuring that all vehicles meet the highest standards of safety, quality, and innovation.</p>
           <p>person3@example.com</p>
         </div>
       </div>
