--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <title>About Us - Best Cars</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
+<body>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
     <div class="container-fluid">
@@ -12,59 +16,58 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" style="font-size: larger;" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" style="font-size: larger;" href="/about">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="font-size: larger;" href="/contact">Contact Us</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/about">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a></li>
         </ul>
       </div>
     </div>
   </nav>
   
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
-      <div class="banner" name="about-header">
-        <h1>About Us</h1>
-        <p>Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.</p>
-      </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
+  <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
+    <div class="banner" name="about-header">
+      <h1>About Us</h1>
+      <p>Welcome to Best Cars dealership, home to the best cars in North America. We deal in the sale of domestic and imported cars at reasonable prices.</p>
+    </div>
+    
+    <div style="display: flex; flex-direction: row; justify-content: space-around; margin:auto">
+      <!-- Team Member 1 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/owner.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.png" alt="Owner">
         <div class="card-body">
           <p class="title">Owner</p>
-          <p>Person1 Title</p>
+          <p>Tom Cruze</p>
           <p class="card-text">Our CEO, Tom Cruze, has over 20 years of experience in the automotive industry. She believes in providing excellent service and quality vehicles.</p>
           <p>person1@example.com</p>
         </div>
       </div>
 
+      <!-- Team Member 2 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/accountant.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.png" alt="Chief Accountant">
         <div class="card-body">
           <p class="title">Chief Accountant</p>
-          <p>Person2 Title</p>
-          <p class="card-text">With over 15 years of experience in financial management, John Doe leads the accounting department at Best Cars Dealership. His expertise ensures the company's financial health through meticulous budgeting, accurate record-keeping, and compliance with all regulatory standards.</p>
+          <p>John Doe</p>
+          <p class="card-text">With over 15 years of experience in financial management, John Doe leads the accounting department at Best Cars Dealership.</p>
           <p>person2@example.com</p>
         </div>
       </div>
 
+      <!-- Team Member 3 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/engineer.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.png" alt="Chief Engineer">
         <div class="card-body">
           <p class="title">Chief Engineer</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Jane Smith brings over 20 years of automotive engineering expertise to Best Cars Dealership. As our Chief Engineer, she oversees the technical operations, ensuring that all vehicles meet the highest standards of safety, quality, and innovation.</p>
+          <p>Jane Smith</p>
+          <p class="card-text">Jane Smith brings over 20 years of automotive engineering expertise to Best Cars Dealership.</p>
           <p>person3@example.com</p>
         </div>
       </div>
     </div>
-    </div>
-    </div>
-    
+  </div>
 </div>
 
+<!-- Bootstrap JS for Navbar -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
