--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -12,30 +12,6 @@
             margin: 0;
             padding: 0;
         }
-
-        .navbar {
-            list-style-type: none;
-            margin: 0;
-            padding: 10px;
-            background-color: #343a40;
-            display: flex;
-            justify-content: left;
-        }
-
-        .navbar li {
-            margin-right: 20px;
-        }
-
-        .navbar a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .navbar a.active {
-            text-decoration: underline;
-        }
-
         .header-image {
             width: 90%;
             max-width: 800px;
@@ -46,7 +22,6 @@
             margin: 20px auto;
             display: block;
         }
-
         .contact-section {
             max-width: 900px;
             margin: 0 auto;
@@ -57,30 +32,25 @@
             align-items: flex-start;
             gap: 20px;
         }
-
         .contact-info {
             flex: 1 1 300px;
             max-width: 350px;
             padding: 10px;
         }
-
         .contact-info h1 {
             color: #2c3e50;
             font-size: 24px;
         }
-
         .contact-info p {
             font-size: 14px;
             color: #555;
             margin: 6px 0;
         }
-
         .contact-image {
             flex: 1 1 300px;
             max-width: 350px;
             padding: 10px;
         }
-
         .contact-image img {
             width: 100%;
             height: auto;
@@ -90,27 +60,44 @@
     </style>
 </head>
 <body>
-    <nav>
-        <ul class="navbar">
-            <li><a href="/about/">About Us</a></li>
-            <li><a href="/contact/" class="active">Contact Us</a></li>
-        </ul>
-    </nav>
 
-    <!-- Smaller and centered banner -->
-    <img src="/static/cars.jpeg" alt="Cars Banner" class="header-image">
-
-    <div class="contact-section">
-        <div class="contact-info">
-            <h1>Contact Us</h1>
-            <p>Email: info@bestcars.com</p>
-            <p>Phone: +1 (555) 123-4567</p>
-            <p>Address: 123 Auto Lane, Detroit, MI, USA</p>
-            <p>Customer Service Hours: Mon - Fri, 9AM - 6PM EST</p>
-        </div>
-        <div class="contact-image">
-            <img src="/static/contactus.png" alt="Contact Us">
-        </div>
+<!-- Bootstrap Navbar (copied from About.html) -->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
+  <div class="container-fluid">
+    <h2 style="padding-right: 5%;">Dealerships</h2>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" style="font-size: larger;" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" style="font-size: larger;" href="/about/">About Us</a></li>
+        <li class="nav-item"><a class="nav-link active" style="font-size: larger;" href="/contact/">Contact Us</a></li>
+      </ul>
     </div>
+  </div>
+</nav>
+
+<!-- Banner Image -->
+<img src="/static/cars.jpeg" alt="Cars Banner" class="header-image">
+
+<!-- Contact Info Section -->
+<div class="contact-section">
+    <div class="contact-image">
+        <img src="/static/contactus.png" alt="Contact Us">
+    </div>
+    <div class="contact-info">
+        <h1>Contact Us</h1>
+        <p>Email: info@bestcars.com</p>
+        <p>Email: support@bestcars.com</p>
+        <p>Phone: +1 (555) 123-4567</p>
+        <p>Phone: +1 (555) 124-4567</p>
+        <p>Address: 123 Auto Lane, Detroit, MI, USA</p>
+        <p>Customer Service Hours: Mon - Fri, 9AM - 6PM EST</p>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
